--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
     
       <main>
         <p>
-          <blockquote>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</blockquote>  <br> 
+          <blockquote>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</blockquote>
+          <br> 
+          <blockquote>Ice cream: In a small pot over medium heat, combine milk and grandulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the eqq yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</blockquote>
+          <br>
+          <blockquote>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nute. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish</blockquote>
         </p>
       </main>
         
