--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <br> 
           <blockquote>Ice cream: In a small pot over medium heat, combine milk and grandulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the eqq yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</blockquote>
           <br>
-          <blockquote>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nute. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish</blockquote>
+          <blockquote>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nute. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</blockquote>
         </p>
       </main>
         
