--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel = "stylesheet" href = "css/style.css">
   </head>
 
-  <body>
+  <body style = "max-width: 900px; text-align: left; margin-left: auto; margin-right: auto">
 
         <nav>
           Delicious
@@ -21,7 +21,7 @@
      <header>FridayLab</header>
     
       <main>
-        <p>
+        <p class = "funky-p">
           <blockquote>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium heat, stirring frequently, until you have a chunky-jammy mixture. Add salt with one or two stirs, set aside and let cool completely.</blockquote>
           <br> 
           <blockquote>Ice cream: In a small pot over medium heat, combine milk and grandulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the eqq yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</blockquote>
@@ -32,7 +32,7 @@
         
         <section id = "bottomCard">
           <card class = "card">
-            <img src = "img/van-pic.png">
+            <img id = "lady"src = "img/van-pic.png">
             <header>
               Vanessa Stevenson
             </header>
@@ -43,6 +43,7 @@
         </section>
   </body>
   <footer>
+    <img id="footerImg" src = "img/small-logo.png">
     <p>Delicious &#169; 2013 &loz; All Rights Reserved. <br>
     Proudly published with Ghost. </p>
   </footer>
